# icommandlib

./: .gitignore  CHANGELOG.md  MANIFEST.in  PROJECT_NAME  README.md  README.rst  TODO.rst  key.sh  pyproject.toml  setup.py
docs/public/: changelog.md  index.md
docs/public/using/: custom-screen-condition.md  index.md  kill.md  process-properties.md  screenshot.md  screensize.md  send-keys.md  wait-until-successful-exit.md
docs/src/: index.md
hitch/: app.story  code_that_does_things.py  custom-screen-condition.story  debugrequirements.txt  devenv.yml  docstory.yml  engine.py  hitchreqs.in  hitchreqs.txt  key.py  kill.story  process-properties.story  prompt.story  screenshot.story  screensize.story  send-keys.story  signals.story  sigterm.story  timeout.story  todo.yml  tty.story  unexpected-exit.story  wait-until-successful-exit.story
hitch/artefacts/: finalscreenshot.txt  resized-screenshot.txt  stripshot-after-finish.txt
hitch/story/: app.story  custom-screen-condition.story  kill.story  process-properties.story  quickstart.story  screenshot.story  screensize.story  send-keys.story  tty.story  wait-until-successful-exit.story
icommandlib/: __init__.py  exceptions.py  handle.py  icommand.py  iprocess.py  messages.py  run.py  utils.py
